// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuProvider and useMenu should render MenuProvider and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button>
      Trigger
    </button>
    <div
      hidden=""
    />
  </div>
</DocumentFragment>
`;

exports[`MenuProvider and useMenu should toggle isOpen state when trigger button is clicked and match snapshot 1`] = `
<DocumentFragment>
  <div>
    <button>
      Trigger
    </button>
    <div>
      <span>
        Content
      </span>
    </div>
  </div>
</DocumentFragment>
`;
